--- a/proj/8080Emulator.vcproj
+++ b/proj/8080Emulator.vcproj
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="SDL.lib SDLmain.lib"
+				AdditionalDependencies="SDL.lib SDLmain.lib MSVCRTD.LIB"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\lib\SDL-1.2.15\lib\x86"
 				GenerateDebugInformation="true"
